--- a/public/locales/pt-br/translation.json
+++ b/public/locales/pt-br/translation.json
@@ -1,3 +1,29 @@
 {
-  "CrushedURL": "encurtadas desde que você entrou aqui"
+  "shortened": "URLs encurtadas desde que você entrou aqui",
+  "long-url": "https://uma-url-enoooooooooooooooooooooooooooooooooooooooorme.com",
+  "make-private": "Tornar url privada",
+  "make-public": "Tornar url pública",
+  "change-language": "Mudar idioma",
+  "english-us": "Inglês-EUA",
+  "spanish-es": "Espanhol-ES",
+  "portugues-br": "Português-BR",
+  "error": {
+    "Couldn't connect to server": "Não foi possível conectar ao servidor",
+    "This URL has already been shortened": "Essa URL já foi encurtada",
+    "Unable to save this URL":  "Não foi possível gravar essa URL",
+    "Invalid URL": "Essa URL é inválida",
+    "Server error": "Erro no sevidor"
+  },
+  "analytics":{
+    "title": "Análises",
+    "subtitle": "Veja quantas pessoas essa URL alcançou, ao redor do mundo",
+    "charts": "Gráficos",
+    "accesses": "Acessos",
+    "accesses-table-header": {
+      "Browser": "Navegador",
+      "Name": "Nome",
+      "Country": "País",
+      "Date": "Data"
+    }
+  }
 }
