--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,7 +6,7 @@
   "change-language": "Change language",
   "english-us": "English-US",
   "spanish-es": "Spanish-ES",
-  "portugues-br": "Portuguese-BR",
+  "portuguese-br": "Portuguese-BR",
   "error": {
     "Couldn't connect to server": "Couldn't connect to server",
     "This URL has already been shortened": "This URL has already been shortened",
