--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -12,7 +12,8 @@
     "This URL has already been shortened": "Essa URL já foi encurtada",
     "Unable to save this URL":  "Não foi possível gravar essa URL",
     "Invalid URL": "Essa URL é inválida",
-    "Server error": "Erro no sevidor"
+    "Server error": "Erro no sevidor",
+    "Access key does not match": "Chave de acesso incorreta"
   },
   "analytics":{
     "title": "Analytics",
@@ -25,5 +26,11 @@
       "Country": "País",
       "Date": "Data"
     }
+  },
+  "auth": {
+    "title": "Se autentique para acessar a URL",
+    "name": "Nome (opcional)",
+    "password": "Senha",
+    "access": "Acessar URL"
   }
 }
