--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -25,6 +25,12 @@
       "Name": "Nome",
       "Country": "País",
       "Date": "Data"
+    },
+    "accesses-table-content": {
+      "Unknown": "Desconocido"
+    },
+    "format": {
+      "date": "yyyy-MM-dd"
     }
   },
   "auth": {
