--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -4,18 +4,19 @@
   "make-private": "Make this URL private",
   "make-public": "Make this URL public",
   "change-language": "Mudar idioma",
+  "close-language": "Fechar",
   "english-us": "English-US",
   "spanish-es": "Spanish-ES",
   "portuguese-br": "Portuguese-BR",
   "error": {
     "Couldn't connect to server": "Não foi possível conectar ao servidor",
     "This URL has already been shortened": "Essa URL já foi encurtada",
-    "Unable to save this URL":  "Não foi possível gravar essa URL",
+    "Unable to save this URL": "Não foi possível gravar essa URL",
     "Invalid URL": "Essa URL é inválida",
     "Server error": "Erro no sevidor",
     "Access key does not match": "Chave de acesso incorreta"
   },
-  "analytics":{
+  "analytics": {
     "title": "Analytics",
     "subtitle": "See how this url reached people around the world",
     "charts": "Charts",
@@ -28,6 +29,13 @@
     },
     "accesses-table-content": {
       "Unknown": "Desconocido"
+    },
+    "modal": {
+      "placeholder": "Código",
+      "paste": "Exemplo: shrnt-it.com/",
+      "code": "código",
+      "valid": "Use a valid code",
+      "needed": "No code to search"
     },
     "format": {
       "date": "yyyy-MM-dd"
