--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,6 +21,7 @@
     "subtitle": "See how this url reached people around the world",
     "charts": "Charts",
     "accesses": "Accesses",
+    "see": "See analytics",
     "accesses-table-header": {
       "Browser": "Browser",
       "Name": "Name",
