--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -21,6 +21,7 @@
     "subtitle": "Vea cómo esta URL llegó a personas de todo el mundo",
     "charts": "Gráficas",
     "accesses": "Acessos",
+    "see": "Ver analíticas",
     "accesses-table-header": {
       "Browser": "Navegador",
       "Name": "Nome",
