--- a/public/locales/pt-br/translation.json
+++ b/public/locales/pt-br/translation.json
@@ -21,6 +21,7 @@
     "subtitle": "Veja quantas pessoas essa URL alcançou, ao redor do mundo",
     "charts": "Gráficos",
     "accesses": "Acessos",
+    "see": "Ver análises",
     "accesses-table-header": {
       "Browser": "Navegador",
       "Name": "Nome",
