Fix analytic charts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -42,7 +42,9 @@
       "valid": "Use a valid code",
       "needed": "No code to search"
     },
-    "noAccesses": "No data to display yet..."
+    "noAccesses": "No data to display yet...",
+    "label": "Last 7 days accesses",
+    "others": "Others"
   },
   "auth": {
     "title": "Authenticate to access URL",
