--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -45,7 +45,9 @@
     "noAccesses": "No hay datos a presentar ahora...",
     "format": {
       "date": "yyyy-MM-dd"
-    }
+    },
+    "label": "Acesós destes 7 días",
+    "others": "Otros"
   },
   "auth": {
     "title": "Se autentique para acessar a URL",
