--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -8,6 +8,8 @@
   "copied": "Copiado",
   "close-language": "Cerrar",
   "password": "Contraseña de accesso",
+  "expiration": "Fecha de vencimiento",
+  "password_place_holder": "Preencher uma chave de acesso",
   "english-us": "Inglés-US",
   "spanish-es": "Español-ES",
   "portuguese-br": "Portugués-BR",
